[workspace]
members = ["libs/bold","libs/gfx_sizes", "libs/hex_hop","libs/ice_puzzle", "libs/offset", "libs/pak", "libs/pak_types", "libs/pathfinding", "libs/sword","libs/text", "libs/vec1", "libs/world",
    "ripe",
    "run-wasm"
, "tooling/ripe-pack", "tooling/tile-viewer"]
resolver = "3" # Merely to silence the warning when we add a new crate.

# We aim for fast to compile, with the dev profile. At this time, `opt-level = 2`
# seems to help with that goal.
[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = true

[profile.debugging]
inherits = "dev"
opt-level = 0
debug = true

[profile.release]
strip = true
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# This noticably decreases code size
codegen-units = 1
