[package]
name = "app"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/app.rs"
crate-type = ["rlib", "dylib"]

[dependencies.config]
path = "../config"

[dependencies.game]
path = "../game"

[dependencies.models]
path = "../models"

[dependencies.gfx]
path = "../gfx"

[dependencies.features]
path = "../features"

[dependencies.platform_types]
path = "../platform_types"

[features]
default = []
invariant-checking = ["features/invariant-checking", "game/invariant-checking"]
logging = ["features/logging", "game/logging"]
wasm = ["config/wasm"]
reload = []
refresh = ["platform_types/refresh"]
