[package]
name = "app"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/app.rs"
crate-type = ["rlib", "dylib"]

[dependencies.config]
path = "../config"

[dependencies.ice_puzzle]
path = "../ice_puzzle"

[dependencies.features]
path = "../features"

[dependencies.game]
path = "../game"

[dependencies.gfx]
path = "../gfx"

[dependencies.models]
path = "../models"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.vec1]
path = "../vec1"

[dependencies.xs]
path = "../xs"

[features]
default = []
invariant-checking = ["features/invariant-checking", "game/invariant-checking"]
logging = ["features/logging", "game/logging"]
wasm = ["config/wasm"]
reload = []
refresh = ["platform_types/refresh"]
