[package]
name = "game"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/game.rs"

[dependencies.features]
path = "../features"

[dependencies.models]
path = "../models"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.vec1]
path = "../vec1"

[dependencies.world]
path = "../world"

[dependencies.xs]
path = "../xs"

[features]
default = []
invariant-checking = ["world/invariant-checking"]
logging = ["world/logging"]
