[package]
name = "gfx"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/gfx.rs"

[dependencies.models]
path = "../models"

[dependencies.pak_types]
path = "../pak_types"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.text]
path = "../text"

[dependencies.xs]
path = "../xs"



