[package]
name = "pak"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/pak.rs"

[dependencies]
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dependencies.config]
path = "../config"

[dependencies.models]
path = "../models"

[dependencies.platform_types]
path = "../platform_types"