[package]
name = "pak"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/pak.rs"

[dependencies]
# TODO? PNG uses DEFLATE compression, same as zip files. Might be worth seeing whether
# we can get down to shipping only one DEFLATE implementation.
png = { version = "0.18.0", default-features = false, features = [] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dependencies.config]
path = "../config"

[dependencies.gfx_sizes]
path = "../gfx_sizes"

[dependencies.models]
path = "../models"

[dependencies.pak_types]
path = "../pak_types"

[dependencies.platform_types]
path = "../platform_types"