[package]
name = "platform_types"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/platform_types.rs"

[dependencies.pak_types]
path = "../pak_types"

[dependencies.gfx_sizes]
path = "../gfx_sizes"

[dependencies.xs]
path = "../xs"

[features]
refresh = []