[package]
name = "render"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/render.rs"

[dependencies]

[dependencies.assets]
path = "../assets"

[dependencies.gfx_sizes]
path = "../gfx_sizes"

[dependencies.pak_types]
path = "../pak_types"

[dependencies.platform_types]
path = "../platform_types"

