[package]
name = "sword"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/sword.rs"

[dependencies]

[dependencies.gfx]
path = "../gfx"

[dependencies.offset]
path = "../offset"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.vec1]
path = "../vec1"

[dependencies.xs]
path = "../xs"
