[package]
name = "world"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/world.rs"

[dependencies]

[dependencies.bold]
path = "../bold"

[dependencies.features]
path = "../features"

[dependencies.hex_hop]
path = "../hex_hop"

[dependencies.ice_puzzle]
path = "../ice_puzzle"

[dependencies.models]
path = "../models"

[dependencies.sword]
path = "../sword"

[dependencies.vec1]
path = "../vec1"

[dependencies.xs]
path = "../xs"

[features]
default = []
invariant-checking = ["features/invariant-checking"]
logging = ["features/logging"]

