[package]
name = "ice_puzzle_game"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/game.rs"

[dependencies.gfx]
path = "../../../gfx"

[dependencies.models]
package = "ice_puzzle_models"
path = "../models"

[dependencies.platform_types]
path = "../../../platform_types"

[dependencies.common]
path = "../legacy/common"

[dependencies.state_manipulation]
path = "../legacy/state_manipulation"

[dependencies.xs]
path = "../../../xs"
