[package]
name = "state_manipulation"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2024"

[dependencies.common]
path = "../common"

[dependencies.gfx]
path = "../../../../gfx"

[dependencies.pak_types]
path = "../../../../pak_types"

[dependencies.xs]
path = "../../../../xs"
